changed units from mJy/sr to Jy/sr in SCUBA2

--- a/notebooks/sedstack_with_all_libraries.ipynb
+++ b/notebooks/sedstack_with_all_libraries.ipynb
@@ -131,8 +131,9 @@
     "nwv = np.sum(wv0) \n",
     "fwhm =[6.32,7.4, 11.3,18.1, 25.2,7., 36.6,15.,18.]\n",
     "efwhm=[6.32,6.7, 11.2,17.6, 23.9,7.8, 35.2,14.5,18.] # want to the measured effective FWHM later\n",
-    "color_correction=[1.25,23.58,23.82,1.018,0.9914,1.0,0.95615,1.0,1.0]\n",
-    "beam_area = [1.55e-09,1.,1.,1.,1.,1.62e-09,1.,5.6e-09,1.] #sr\n",
+    "color_correction=[1.25,23.58,23.82,1.018,0.9914,1e-3,0.95615,1e-3,1.0]\n",
+    "#beam_area = [1.55e-09,1.,1.,1.,1.,1.62e-09,1.,5.6e-09,1.] #sr\n",
+    "beam_area = [1.55e-09,1.,1.,1.,1.,1.,1.,1.,1.] #sr\n",
     "\n",
     "pixsize_suffix = '5.0_arcsec_pixels'\n",
     "\n",
