added 24 um cut

--- a/notebooks/simstack_with_libraries_example_UDS.ipynb
+++ b/notebooks/simstack_with_libraries_example_UDS.ipynb
@@ -27,6 +27,12 @@
     "from astropy.wcs import WCS\n",
     "from astropy.io import fits\n",
     "import readcol\n",
+    "from utils import fast_sed_fitter\n",
+    "from utils import fast_Lir\n",
+    "from utils import L_fun\n",
+    "from utils import L_fit\n",
+    "from utils import T_fun\n",
+    "from utils import T_fit\n",
     "from utils import shift_twod\n",
     "from utils import dist_idl\n",
     "from utils import loggen\n",
