changed to importing pickle reader from bincatalogs

--- a/notebooks/plot_simstack_output.ipynb
+++ b/notebooks/plot_simstack_output.ipynb
@@ -19,7 +19,7 @@
     "from utils import stagger_x\n",
     "from utils import subset_averages_from_ids\n",
     "from utils import main_sequence_s15\n",
-    "from skymaps import Field_catalogs\n",
+    "from bincatalogs import Field_catalogs\n",
     "from astropy.cosmology import Planck15 as cosmo\n",
     "import astropy.units as u\n",
     "try:\n",
