--- a/notebooks/plot_simstack_output.ipynb
+++ b/notebooks/plot_simstack_output.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pdb\n",
+    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import pylab as plt\n",
+    "\n",
+    "sys.path.append(os.path.join('..','..','simstack'))\n",
+    "sys.path.append(os.path.join('..','..','Utils'))\n",
+    "\n",
     "from utils import clean_args\n",
     "from utils import clean_nans\n",
     "from utils import fast_sed\n",
@@ -32,10 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "conv_luv_to_sfr = 2.17e-10\n",
@@ -49,10 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "popcolor=['red','blue','green','orange','black','grey','chocolate','darkviolet','pink','magenta','dodgerblue','lavender','blue','red','green','orange','black','grey','chocolate','darkviolet','pink','magenta','dodgerblue','lavender']"
@@ -60,37 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "path_pickles = os.environ['PICKLESPATH']\n",
-    "path_maps    = os.environ['MAPSPATH']\n",
-    "path_catalogs= os.environ['CATSPATH']"
+    "path_pickles = os.path.join('/','d','pickles') #os.environ['PICKLESPATH']\n",
+    "path_maps    = os.path.join('/','d','maps') #os.environ['MAPSPATH']\n",
+    "path_catalogs= os.path.join('/','d','catalogs') #os.environ['CATSPATH']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/pickles//simstack/stacked_flux_densities/simstack_fluxes/uVista_Laigle_v1.1__2pop__7bands__s15_bins_in_slices/uvista__DR2__2pop__7_maps_s15_binning.cfg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Location of the stacked parameter file\n",
     "shortname = 'uVista_Laigle_v1.1__2pop__7bands__s15_bins_in_slices'\n",
-    "path_config = path_pickles + '/simstack/stacked_flux_densities/simstack_fluxes/'+shortname+'/'\n",
+    "path_config = os.path.join(path_pickles,'simstack','stacked_flux_densities','simstack_fluxes',shortname)\n",
     "file_config = 'uvista__DR2__2pop__7_maps_s15_binning.cfg'\n",
     "if os.path.exists(path_config+file_config) == True:\n",
-    "    print path_config+file_config"
+    "    print(path_config+file_config)"
    ]
   },
   {
@@ -109,25 +100,26 @@
    ],
    "source": [
     "#PickledStacksReader will look at the config file defined in previous cell to determine if bootstrap or not, and read and organize it \n",
-    "stacked_flux_densities = PickledStacksReader(path_config,file_config)"
+    "stacked_flux_densities = PickledStacksReader(os.path.join(path_config,file_config))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__doc__', '__init__', '__module__', 'bin_ids', 'config_file', 'fqs', 'get_error_bar_dictionary', 'get_parameters', 'ind', 'is_bootstrap', 'm_keys', 'm_nodes', 'm_z_key_builder', 'maps', 'ndec', 'nm', 'npops', 'nw', 'nz', 'params', 'path', 'pops', 'read_pickles', 'simstack_error_array', 'simstack_flux_array', 'simstack_nuInu_array', 'slice_key_builder', 'wvs', 'z_keys', 'z_nodes']\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-157c12a5a770>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-30-157c12a5a770>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print dir(stacked_flux_densities)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "#Instance of PickledStacksReader class contains the following \n",
-    "print dir(stacked_flux_densities)"
+    "print(dir(stacked_flux_densities))"
    ]
   },
   {
@@ -145,7 +137,7 @@
    ],
    "source": [
     "#For example, params contains:\n",
-    "print stacked_flux_densities.params.keys()"
+    "print(stacked_flux_densities.params.keys())"
    ]
   },
   {
@@ -477,21 +469,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
